added image generation code for openai

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 APP_URL=http://localhost:3000
 PORT=5001
-MONGO_URI=mongodb://localhost:27017/postproai
+MONGO_URI=mongodb://localhost:27017/postproa
+OPEN_AI_ENDPOINT=https://api.openai.com
