file storage for image created

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "dist-staged": "npm run build && git add dist/",
+    "pre-commit": "dist-staged"
   },
   "keywords": [],
   "author": "",
