--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ APP_URL=http://localhost:3000
 PORT=5001
 MONGO_URI=mongodb://localhost:27017/postproa
 OPEN_AI_ENDPOINT=https://api.openai.com
+ENVIRONMENT=development
