instagram connection APIs added

--- a/example.env
+++ b/example.env
@@ -1,5 +1,8 @@
 APP_URL=http://localhost:3000
 PORT=5001
-MONGO_URI=mongodb://localhost:27017/postproa
+MONGO_URI=mongodb://localhost:27017/postproai
 OPEN_AI_ENDPOINT=https://api.openai.com
+FACEBOOK_API_ENDPOINT=https://graph.facebook.com/v20.0
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
 ENVIRONMENT=development
