--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "dist-staged": "npm run build && git add dist/",
-    "pre-commit": "dist-staged"
+    "pre-commit": "dist-staged",
+    "ngrok": "ngrok http 5001"
   },
   "keywords": [],
   "author": "",
