--- a/example.env
+++ b/example.env
@@ -5,4 +5,5 @@ OPEN_AI_ENDPOINT=https://api.openai.com
 FACEBOOK_API_ENDPOINT=https://graph.facebook.com/v20.0
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
-ENVIRONMENT=development
+JWT_TOKEN_SECRET=
+ENVIRONMENT=
