firebase file storage implementation

--- a/example.env
+++ b/example.env
@@ -7,3 +7,14 @@ FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 JWT_TOKEN_SECRET=
 ENVIRONMENT=
+
+TEST_IMAGE_URL=
+# firebase credentials
+API_KEY=your-api-key
+AUTH_DOMAIN=your-auth-domain
+PROJECT_ID=your-project-id
+# FIRESTORE_DB_URL=your-firestore-db-url
+STORAGE_BUCKET=your-storage-bucket
+MESSAGING_SENDER_ID=your-messaging-sender-id
+APP_ID=your-app-id
+MEASUREMENT_ID=your-measurement-id
